--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "example updater",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "build": "electron-builder build --mac --win --publish never",
+    "deploy": "electron-builder build --mac --win --publish always"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/JorneJongsma/electron-updater-example/issues"
   },
-  "homepage": "https://github.com/JorneJongsma/electron-updater-example#readme"
+  "homepage": "https://github.com/JorneJongsma/electron-updater-example#readme",
+  "devDependencies": {
+    "electron": "^5.0.11",
+    "electron-builder": "^20.40.2"
+  },
+  "dependencies": {
+    "electron-updater": "^4.0.6"
+  }
 }
